Implement school years and choose a default school yea
