# centre-ui/src/app/services/models.ts
@@ -16,7 +16,9 @@ export { PageResponseDomainResponse } from './models/page-response-domain-respon
 export { PageResponseFormationResponse } from './models/page-response-formation-response';
 export { PageResponseRegistrationResponse } from './models/page-response-registration-response';
 export { PageResponseRoleResponse } from './models/page-response-role-response';
+export { PageResponseSchoolYearResponse } from './models/page-response-school-year-response';
 export { PageResponseSpecialtyResponse } from './models/page-response-specialty-response';
+export { PageResponseSubjectResponse } from './models/page-response-subject-response';
 export { PageResponseUserResponse } from './models/page-response-user-response';
 export { ParentDetails } from './models/parent-details';
 export { ParentRequest } from './models/parent-request';
@@ -28,8 +30,11 @@ export { RegistrationResponse } from './models/registration-response';
 export { Role } from './models/role';
 export { RoleRequest } from './models/role-request';
 export { RoleResponse } from './models/role-response';
+export { SchoolYearRequest } from './models/school-year-request';
+export { SchoolYearResponse } from './models/school-year-response';
 export { SpecialtyRequest } from './models/specialty-request';
 export { SpecialtyResponse } from './models/specialty-response';
 export { StudentDetails } from './models/student-details';
 export { StudentRequest } from './models/student-request';
+export { SubjectResponse } from './models/subject-response';
 export { UserResponse } from './models/user-response';
