# centre-ui/src/app/services/models/school-year-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface SchoolYearRequest {
+  endYear: number;
+  startYear: number;
+}
