# centre-ui/src/app/services/models/school-year-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface SchoolYearResponse {
+  end_year?: number;
+  id?: number;
+  isDefault?: boolean;
+  start_year?: number;
+}
