# centre-ui/src/app/services/models/subject-response.ts
@@ -1,10 +1,9 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface SubjectResponse {
-    description?: string;
-    id?: number;
-    name?: string;
-    pdfFilePath?: string;
-    wordFilePath?: string;
-  }
-  
+  description?: string;
+  id?: number;
+  name?: string;
+  pdfFilePath?: string;
+  wordFilePath?: string;
+}
